@@ -75,20 +75,20 @@ GroupACLDelete=DELETE FROM acls WHERE groupid=? AND accessid=? AND folderid=?
 #
 GetGroupUserMap=SELECT groupid FROM ixusergroup WHERE type=1 AND linkid=?
 GetGroupParents=SELECT groupid FROM ixusergroup WHERE type=2 AND linkid \
-	IN ($groups)
+    IN ($groups)
 AllGroups=SELECT * FROM groups $where ORDER BY groupname
 GroupCount=SELECT COUNT(linkid) AS count FROM ixusergroup WHERE groupid = ? AND type=1 GROUP BY groupid
 GetGroup=SELECT * FROM groups WHERE groupid=?
 LinkUsers=SELECT i.*,u.email,u.realname \
-	FROM ixusergroup AS i \
-	INNER JOIN users AS u ON i.linkid=u.userid \
-	WHERE i.type=1 AND i.groupid=?
+    FROM ixusergroup AS i \
+    INNER JOIN users AS u ON i.linkid=u.userid \
+    WHERE i.type=1 AND i.groupid=?
 LinkedUsers=SELECT i.*,g.groupname FROM ixusergroup AS i \
     INNER JOIN groups AS g ON i.groupid=g.groupid \
     WHERE i.type=1 AND i.linkid=?
 LinkGroups=SELECT i.*,g.groupname FROM ixusergroup AS i \
-	INNER JOIN groups AS g ON i.linkid=g.groupid \
-	WHERE i.type=2 AND i.groupid=?
+    INNER JOIN groups AS g ON i.linkid=g.groupid \
+    WHERE i.type=2 AND i.groupid=?
 AllGroupIndex=SELECT * FROM ixusergroup WHERE type=2
 AddGroup=INSERT INTO groups (groupname,master) VALUES (?,0)
 AddLinkIndex=INSERT INTO ixusergroup (type,linkid,groupid) VALUES (?,?,?)
@@ -97,11 +97,11 @@ DeleteGroup=DELETE FROM groups WHERE groupid=?
 DeleteGroupIndex=DELETE FROM ixusergroup WHERE groupid=?
 DeleteLinkIndices=DELETE FROM ixusergroup WHERE linkid=? AND i.type=?
 DeleteLinkIndex=DELETE FROM ixusergroup  \
-	WHERE type=? AND linkid=? AND groupid=?
+    WHERE type=? AND linkid=? AND groupid=?
 GetGroupID=SELECT groupid FROM groups WHERE groupname=?
 UserGroups=SELECT i.*,g.groupname FROM ixusergroup AS i \
-	INNER JOIN groups AS g ON i.groupid=g.groupid \
-	WHERE type=1 AND linkid=?
+    INNER JOIN groups AS g ON i.groupid=g.groupid \
+    WHERE type=1 AND linkid=?
 
 
 #
@@ -109,22 +109,22 @@ UserGroups=SELECT i.*,g.groupname FROM ixusergroup AS i \
 #
 CountUsers=SELECT COUNT(*) FROM users WHERE confirmed=1
 AllUsers=SELECT * FROM users AS u \
-	ORDER BY nickname,realname
+    ORDER BY nickname,realname
 SearchUserNames=SELECT * FROM users AS u \
-	WHERE (nickname LIKE ? OR realname LIKE ?) $where \
-	ORDER BY $order
+    WHERE (nickname LIKE ? OR realname LIKE ?) $where \
+    ORDER BY $order
 SearchUsers=SELECT * FROM users AS u \
-	WHERE (nickname LIKE ? OR realname LIKE ?) $where \
-	ORDER BY $order
+    WHERE (nickname LIKE ? OR realname LIKE ?) $where \
+    ORDER BY $order
 ListAllNames=SELECT * FROM users ORDER BY nickname,realname
 FindUser=SELECT userid,nickname,realname FROM users WHERE email = ?
 FindUsers=SELECT u.userid,u.realname,u.email FROM users AS u \
-	WHERE $where
+    WHERE $where
 GetEmail=SELECT email FROM users WHERE userid=?
 GetUserByID=SELECT * FROM users WHERE userid=?
 UserName=SELECT u.userid,u.nickname,u.realname \
-	FROM users AS u \
-	WHERE u.userid=?
+    FROM users AS u \
+    WHERE u.userid=?
 NewUser=INSERT INTO users (password,nickname,realname,email,actuserid) VALUES (SHA1(?),?,?,?,?)
 SaveUser=UPDATE users SET nickname=?,realname=?,email=? WHERE userid=?
 AdminSaveUser=UPDATE users SET accessid=?,search=?,realm=?,nickname=?,realname=?,email=?,imageid=? WHERE userid=?
@@ -155,14 +155,14 @@ DeleteImage=DELETE FROM images WHERE imageid=?
 GetImage=SELECT * FROM images WHERE imageid=?
 
 MetaImages=SELECT i.* FROM images AS i \
-	INNER JOIN imetadata AS m ON i.imageid=m.imageid \
-	$where \
-	ORDER BY i.imageid
+    INNER JOIN imetadata AS m ON i.imageid=m.imageid \
+    $where \
+    ORDER BY i.imageid
 InsertMetaData=INSERT INTO imetadata (imageid,tag) VALUES (?,?)
 DeleteMetaData=DELETE FROM imetadata WHERE imageid=?
 SearchMetaData=SELECT * FROM images AS i \
-	INNER JOIN imetadata AS m ON i.imageid=m.imageid\
-	WHERE tag IN (?)
+    INNER JOIN imetadata AS m ON i.imageid=m.imageid\
+    WHERE tag IN (?)
 GetMetaData=SELECT * FROM imetadata WHERE imageid=?
 
 
@@ -172,8 +172,8 @@ GetMetaData=SELECT * FROM imetadata WHERE imageid=?
 GetUserCode=SELECT * FROM ixsurvey WHERE userid=?
 SaveUserCode=INSERT INTO ixsurvey (code,userid) VALUES (?,?);
 SurveyLogin=SELECT u.* FROM ixsurvey AS x \
-	INNER JOIN users AS u ON x.userid=u.userid \
-	WHERE x.code=?
+    INNER JOIN users AS u ON x.userid=u.userid \
+    WHERE x.code=?
 
 SurveyCheck=SELECT * FROM ixsurvey WHERE userid=?
 CheckCourse=SELECT * FROM ixcourse WHERE courseid=? AND userid=?
@@ -185,31 +185,31 @@ SaveEvaluationIndex=UPDATE ixcourse SET completed=? WHERE courseid=? AND userid=
 SaveTalkIndex=INSERT INTO ixcourse (completed,courseid,userid) VALUES (?,?,?)
 
 CourseCheck=SELECT s.userid,x.completed,c.* FROM ixsurvey AS s \
-	INNER JOIN ixcourse AS x ON x.userid=s.userid \
-	INNER JOIN course AS c ON (c.courseid=x.courseid AND c.talk=0) \
-	WHERE x.courseid=? AND x.userid=?
+    INNER JOIN ixcourse AS x ON x.userid=s.userid \
+    INNER JOIN course AS c ON (c.courseid=x.courseid AND c.talk=0) \
+    WHERE x.courseid=? AND x.userid=?
 TalkCheck=SELECT c.*,x.completed FROM course AS c \
-	LEFT JOIN ixcourse AS x ON (x.courseid=c.courseid AND x.userid=?)  \
-	WHERE talk>0 AND c.courseid=?
+    LEFT JOIN ixcourse AS x ON (x.courseid=c.courseid AND x.userid=?)  \
+    WHERE talk>0 AND c.courseid=?
 
 ListCourses=SELECT * FROM ixcourse AS x \
-	INNER JOIN course AS c ON c.courseid=x.courseid AND c.talk=0 \
-	WHERE x.userid=? ORDER BY datetime
+    INNER JOIN course AS c ON c.courseid=x.courseid AND c.talk=0 \
+    WHERE x.userid=? ORDER BY datetime
 ListTalks=SELECT c.*,x.completed FROM course AS c \
-	LEFT JOIN ixcourse AS x ON (x.courseid=c.courseid AND x.userid=?)  \
-	WHERE talk>0 ORDER BY talk,course,tutor
+    LEFT JOIN ixcourse AS x ON (x.courseid=c.courseid AND x.userid=?)  \
+    WHERE talk>0 ORDER BY talk,course,tutor
 
 # result checks
 SurveyResults=select * FROM survey
 SurveyResponse=select x.userid,u.realname,x.completed FROM ixsurvey AS x \
-	INNER JOIN users AS u ON u.userid=x.userid \
-	WHERE x.completed>0
+    INNER JOIN users AS u ON u.userid=x.userid \
+    WHERE x.completed>0
 NoSurvey=select x.userid,u.realname,x.code,u.confirmed,u.email FROM ixsurvey AS x \
-	INNER JOIN users AS u ON u.userid=x.userid \
-	WHERE x.completed=0 $where
+    INNER JOIN users AS u ON u.userid=x.userid \
+    WHERE x.completed=0 $where
 DoneSurvey=SELECT x.userid,u.realname,x.code,u.confirmed,u.email,x.completed FROM ixsurvey AS x \
-	INNER JOIN users AS u ON u.userid=x.userid \
-	WHERE x.completed>0
+    INNER JOIN users AS u ON u.userid=x.userid \
+    WHERE x.completed>0
 UpdateSurveyCode=UPDATE survey SET code=? WHERE surveyid=?
 ListSurvey=SELECT * FROM survey ORDER BY surveyid
 SentSurvey=UPDATE ixsurvey SET sentdate=? WHERE userid=?
@@ -217,17 +217,17 @@ SentAnnounce=UPDATE users SET mailed=? WHERE userid=?
 
 
 NoCourse=SELECT s.userid,u.realname,c.courseid,c.course,u.email,s.code FROM ixsurvey AS s \
-	INNER JOIN ixcourse AS x ON x.userid=s.userid \
-	INNER JOIN course AS c ON c.courseid=x.courseid \
-	INNER JOIN users AS u ON u.userid=s.userid \
-	WHERE x.completed=0
+    INNER JOIN ixcourse AS x ON x.userid=s.userid \
+    INNER JOIN course AS c ON c.courseid=x.courseid \
+    INNER JOIN users AS u ON u.userid=s.userid \
+    WHERE x.completed=0
 SurveyQuestionResults=SELECT value,count(value) FROM survey WHERE name=? GROUP BY value 
 SurveyFeedbackResults=SELECT value,1 FROM survey WHERE name=?
 SurveyResponded=SELECT userid FROM ixsurvey WHERE completed>0
 SurveyNotResponded=SELECT userid FROM ixsurvey WHERE completed=0
 DoneTutorial=SELECT x.userid,u.realname,u.confirmed,u.email,x.completed FROM ixcourse AS x \
-	INNER JOIN users AS u ON u.userid=x.userid \
-	WHERE x.completed>0
+    INNER JOIN users AS u ON u.userid=x.userid \
+    WHERE x.completed>0
 
 AllCourses=SELECT * FROM course WHERE room != ''
 AllActiveCourses=SELECT * FROM course WHERE room != '' AND talk > -1
@@ -262,39 +262,42 @@ AddAnnounce=INSERT INTO announce (hFrom, hSubject, body, publish) VALUES (?,?,?,
 SaveAnnounce=UPDATE announce SET hFrom=?, hSubject=?, body=?, publish=? WHERE announceid=?
 AnnounceSent=SELECT COUNT(DISTINCT userid) FROM ixannounce WHERE announceid=?
 AnnounceNotSent=SELECT COUNT(DISTINCT userid) FROM users \
-	WHERE userid NOT IN (SELECT userid FROM ixannounce WHERE announceid=?) AND confirmed=1
+    WHERE userid NOT IN (SELECT userid FROM ixannounce WHERE announceid=?) AND confirmed=1
 ListAnnounceSent=SELECT DISTINCT u.* FROM users AS u \
-	LEFT JOIN ixannounce AS x ON x.userid=u.userid WHERE x.announceid=? $sort
+    LEFT JOIN ixannounce AS x ON x.userid=u.userid WHERE x.announceid=? $sort
 ListAnnounceUnsent=SELECT u.*,x.code FROM users AS u \
-	INNER JOIN ixsurvey AS x ON x.userid=u.userid \
-	WHERE (u.userid) NOT IN (SELECT DISTINCT z.userid FROM users AS z \
-	LEFT JOIN ixannounce AS x ON x.userid=z.userid WHERE x.announceid=?) \
-	AND u.confirmed=1 $sort
+    INNER JOIN ixsurvey AS x ON x.userid=u.userid \
+    WHERE (u.userid) NOT IN (SELECT DISTINCT z.userid FROM users AS z \
+    LEFT JOIN ixannounce AS x ON x.userid=z.userid WHERE x.announceid=?) \
+    AND u.confirmed=1 $sort
 InsertAnnounceIndex=INSERT INTO ixannounce (announceid,userid,sentdate) VALUES (?,?,?)
 
 CountConfirmedUsers=SELECT COUNT(*) FROM users WHERE confirmed=1
 ListConfirmedUsers=SELECT u.*,x.code FROM users AS u \
-	INNER JOIN ixsurvey AS x ON x.userid=u.userid \
-	WHERE u.confirmed=1
+    INNER JOIN ixsurvey AS x ON x.userid=u.userid \
+    WHERE u.confirmed=1
 ListSelectedUsers=SELECT u.*,x.code FROM users AS u \
-	INNER JOIN ixsurvey AS x ON x.userid=u.userid \
-	WHERE u.confirmed=1 AND u.userid IN ($ids)
+    INNER JOIN ixsurvey AS x ON x.userid=u.userid \
+    WHERE u.confirmed=1 AND u.userid IN ($ids)
 
 AdminSurveyNot=SELECT u.*,x.code FROM users AS u \
-	INNER JOIN ixsurvey AS x ON x.userid=u.userid \
-	WHERE u.confirmed=1 AND u.userid NOT IN (SELECT userid FROM ixsurvey WHERE completed>0) \
+    INNER JOIN ixsurvey AS x ON x.userid=u.userid \
+    WHERE u.confirmed=1 AND u.userid NOT IN (SELECT userid FROM ixsurvey WHERE completed>0) \
     $sort
 AdminSurveys=SELECT x.userid,u.realname,u.email,x.completed FROM ixsurvey AS x \
     INNER JOIN users AS u ON u.userid=x.userid \
-    WHERE x.completed>0 $sort
+    WHERE x.completed>0 \
+    $sort
 AdminCourses=SELECT c.*,x.completed,x.userid,u.realname,u.email FROM course AS c \
     LEFT JOIN ixcourse AS x ON (x.courseid=c.courseid) \
     INNER JOIN users AS u ON u.userid=x.userid \
-    WHERE talk=0 AND x.completed > 0 order by completed
+    WHERE talk=0 AND x.completed > 0 \
+    ORDER BY u.realname,c.course
 AdminTalks=SELECT c.*,x.completed,x.userid,u.realname,u.email FROM course AS c  \
     LEFT JOIN ixcourse AS x ON (x.courseid=c.courseid) \
     INNER JOIN users AS u ON u.userid=x.userid \
-    WHERE talk>0 AND x.completed > 0 order by completed
+    WHERE talk>0 AND x.completed > 0 order by completed \
+    ORDER BY u.realname,c.course
 AdminTalkList=SELECT * FROM course ORDER BY talk DESC,datetime,course
 GetTalkByID=SELECT * FROM course WHERE courseid=?
 SaveTalk=UPDATE course SET tutor=?,course=?,datetime=?,talk=? WHERE courseid=?
